# learnopencv

./: README.md
Object-Tracking-OpenCV5/: .gitignore  README.md  download_models.py
Object-Tracking-OpenCV5/cpp/: CMakeLists.txt  object_tracking.cpp
Object-Tracking-OpenCV5/cpp/cmake/: RunExpectedFailure.cmake  RunTrackerValidation.cmake
Object-Tracking-OpenCV5/python/: object_tracking.py  requirements.txt
Object-Tracking-OpenCV5/python/tests/: test_download_models.py  test_object_tracking.py
VideoStabilization/: README.md
